--- a/Team_Rudra-main/hod.html
+++ b/Team_Rudra-main/hod.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Mr. Abbadi Charan Reddy - Assistant Professor</title>
+  <title>Mr. Abbadi Charan Reddy | Team Rudra</title>
+  
+  <link rel="website icon" type="png" href="./images/logo1.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Tailwind CSS CDN -->
@@ -36,7 +38,7 @@
           A postgraduate from NIT Warangal, his expertise spans 3D Printing, Composite Materials, and Tribology.
         </p>
       </div>
-      <img src="./images/hod.jpg" alt="Mr. Abbadi Charan Reddy" class="w-60 h-60 rounded-full object-cover border-4 border-gray-700 shadow-xl ml-0 md:ml-10 mt-6 md:mt-0">
+      <img src="./images/hod.jpg" alt="Mr. Abbadi Charan Reddy"  class="w-60 h-60 rounded-full object-cover shadow-xl ml-0 md:ml-10 mt-6 md:mt-0 transform transition duration-300 ease-in-out hover:scale-105 hover:shadow-[0_0_20px_#3b82f6]">
     </div>
 
     <!-- Details Section -->
