--- a/Team_Rudra-main/vehicle.html
+++ b/Team_Rudra-main/vehicle.html
@@ -2,6 +2,8 @@
 <head>  <title>Vehicle | Team Rudra</title> 
 
   <link rel="stylesheet" href="vehicle.css">
+  
+  <link rel="website icon" type="png" href="./images/logo1.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magic/1.1.0/magic.min.css">
   
   <script src="https://cdn.tailwindcss.com"></script>
