--- a/Team_Rudra-main/osd.html
+++ b/Team_Rudra-main/osd.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Prof. Enelli Murali Darshan - OSD</title>
+  <title>Prof. Enelli Murali Darshan - OSD | Team Rudra</title>
+  
+  <link rel="website icon" type="png" href="./images/logo1.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- Tailwind CSS CDN -->
@@ -33,7 +35,7 @@
           As Officer on Special Duty (OSD), he steers high-impact programs and ensures seamless coordination across departments — combining administrative excellence with strategic foresight.
         </p>
       </div>
-      <img src="./images/osd.jpg" alt="Prof. Enelli Murali Darshan Photo" class="w-60 h-60 rounded-full object-cover border-4 border-gray-700 shadow-xl ml-0 md:ml-10 mt-6 md:mt-0">
+      <img src="./images/osd.jpg" alt="Prof. Enelli Murali Darshan Photo"  class="w-60 h-60 rounded-full object-cover shadow-xl ml-0 md:ml-10 mt-6 md:mt-0 transform transition duration-300 ease-in-out hover:scale-105 hover:shadow-[0_0_20px_#3b82f6]">
     </div>
 
     <!-- Sections -->
