--- a/Team_Rudra-main/vc.html
+++ b/Team_Rudra-main/vc.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Prof. A. Govardhan - Profile</title>
+  <title>Prof. A. Govardhan | Team Rudra</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
+  
+  <link rel="website icon" type="png" href="./images/logo1.png">
   <!-- Google Font (Optional) -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
@@ -28,7 +30,7 @@
           He brings a wealth of expertise in teaching, research, and institutional leadership, holding a Ph.D. in Computer Science & Engineering from JNTU Hyderabad.
         </p>
       </div>
-      <img src="./images/vc.jpg" alt="Prof. A. Govardhan Photo" class="w-60 h-60 rounded-full object-cover border-4 border-gray-700 shadow-xl ml-0 md:ml-10 mt-6 md:mt-0">
+      <img src="./images/vc.jpg" alt="Prof. A. Govardhan Photo"  class="w-60 h-60 rounded-full object-cover shadow-xl ml-0 md:ml-10 mt-6 md:mt-0 transform transition duration-300 ease-in-out hover:scale-105 hover:shadow-[0_0_20px_#3b82f6]">
     </div>
 
     <!-- Sections -->
