--- a/Team_Rudra-main/facultyInfo.html
+++ b/Team_Rudra-main/facultyInfo.html
@@ -6,9 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  
   <link rel="website icon" type="png" href="./images/logo1.png">
-  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -22,18 +20,29 @@
   <div class="max-w-7xl mx-auto px-4 py-10">
 
     <!-- Profile Header -->
-    <div class="flex flex-col md:flex-row items-center md:items-start mb-2">
-      <div class="flex-1">
-        <h1 class="text-4xl font-bold text-red-400 mb-4">Dr. V. Chandra Sekhara Rao</h1>
-        <p class="text-gray-300 mb-6 text-justify md:max-w-3xl">
-          Faculty Mentor – Dr. V. Chandra Sekhara Rao (Ph.D., IIT Madras) <br><br>
-          Dr. V. Chandra Sekhara Rao, Associate Professor at RGUKT Basar and mentor of Team Rudra, is much more than a faculty advisor — he’s the backbone of our vision and execution. With a Ph.D. from IIT Madras and a Management Essentials certification from IIM Shillong, he combines deep technical expertise with strategic foresight.
-        </p>
-      </div>
-      <img src="./images/faculty.png" 
-     alt="Dr. Rao Photo"
-     class="w-60 h-60 rounded-full object-cover shadow-xl ml-0 md:ml-10 mt-6 md:mt-0 transform transition duration-300 ease-in-out hover:scale-105 hover:shadow-[0_0_20px_#3b82f6]">
-    </div>
+   <div class="flex flex-col md:flex-row items-center md:items-start mb-8 gap-8">
+  
+  <!-- Text Section with slightly increased width -->
+  <div class="w-full md:w-[70%]">
+    <h1 class="text-4xl font-bold text-red-400 mb-4">Dr. V. Chandra Sekhara Rao</h1>
+    <p class="text-gray-300 mb-6 text-justify">
+      Dr. V. Chandra Sekhara Rao (Ph.D., IIT Madras) is an accomplished academician, research innovator, and strategic institutional leader, currently serving as Associate Professor of Mechanical Engineering at RGUKT Basar. A proud alumnus of IIT Madras, he holds a Ph.D. in Mechanical Engineering, specializing in polymer composites, fracture and durability mechanics, non-destructive testing (NDT), and eco-sustainable engineering solutions.
+      <br><br>
+      With over 11 years of academic, research, and administrative experience, Dr. Rao has consistently driven excellence across diverse verticals — be it in teaching, mentoring, or institutional development. His contributions have been pivotal in shaping a research-driven and innovation-centric ecosystem at RGUKT Basar.
+      <br><br>
+      He was one of the earliest champions of entrepreneurship and applied research on campus, having launched student innovation cells and incubation initiatives as early as 2016. Under his mentorship, RGUKT Basar celebrated its first national triumph in the Smart India Hackathon (Hardware Edition), and since then, he has guided students to file patents, develop prototypes, and win accolades at national platforms.
+    </p>
+  </div>
+
+  <!-- Centered Image Section -->
+  <div class="w-full md:w-[30%] flex justify-center items-center">
+    <img src="./images/faculty.png" 
+         alt="Dr. Rao Photo"
+         class="w-60 h-60 rounded-full mt-20 object-cover shadow-xl transform transition duration-300 ease-in-out hover:scale-105 hover:shadow-[0_0_20px_#3b82f6]">
+  </div>
+
+</div>
+
 
     <!-- Sections -->
     <div class="space-y-8 text-gray-200">
@@ -41,40 +50,40 @@
       <div>
         <h2 class="text-2xl font-semibold text-cyan-400 mb-2">Research & Innovation</h2>
         <p>
-          With research interests in polymer composites, fracture mechanics, and sustainable engineering, Dr. Rao consistently pushes the boundaries of innovation. Under his mentorship, Team Rudra thrives — from design validations and safety checks to real-time problem solving, his involvement ensures we stay grounded in engineering excellence while aiming high.
+          A strong proponent of interdisciplinary collaboration, Dr. Rao led a ₹12 lakh DSIR-funded research project on sustainable construction materials, and has also supervised research on lightweight composites at NIT Warangal. He has published extensively in internationally reputed journals such as Construction & Building Materials and Materials Today: Proceedings, contributing significantly to the fields of structural durability and green technologies.
         </p>
       </div>
 
       <div>
         <h2 class="text-2xl font-semibold text-cyan-400 mb-2">Key Achievements</h2>
         <ul class="list-disc pl-5 mt-2 space-y-1">
-          <li>Mentored RGUKT’s first Smart India Hackathon national-winning team (2019)</li>
-          <li>Guided two patent filings and mentored award-winning student startups like xpertree.com and pubvision.io</li>
-          <li>Led a ₹12 Lakh DSIR-sponsored project and contributed to the world’s first air-conditioned helmet</li>
-          <li>Facilitated 25+ international MoUs for global research exposure</li>
-          <li>Recipient of the Telangana State Best Teacher Award (2024)</li>
+          <li>Launched innovation cells and incubation platforms in 2016 at RGUKT Basar</li>
+          <li>Guided RGUKT’s first national win in Smart India Hackathon – Hardware Edition</li>
+          <li>Supervised patent filings, prototype development, and national-level competition wins</li>
+          <li>Published in international journals on sustainable and composite materials</li>
+          <li>Telangana State Best Teacher Award recipient (2024)</li>
         </ul>
       </div>
 
       <div>
         <h2 class="text-2xl font-semibold text-cyan-400 mb-2">Leadership & Service</h2>
         <ul class="list-disc pl-5 mt-2 space-y-1">
-          <li>Dean (R&D), Former Controller of Examinations, Advisor (Exams)</li>
-          <li>Faculty Representative – Training & Placement</li>
-          <li>Established labs, secured AICTE approvals, streamlined UG admissions</li>
-          <li>Coordinated certifications (Microsoft, SAP, CSWA), FDPs, CNC training, IEI student chapters</li>
+          <li>Former Controller of Examinations and Dean (R&D), Innovation Cell Coordinator</li>
+          <li>Established Strength of Materials Lab and other advanced labs from scratch</li>
+          <li>Reformed examination systems and UG admissions post-2019</li>
+          <li>Organized faculty development programs, SOLIDWORKS training, and startup mentoring</li>
         </ul>
       </div>
 
       <div>
         <h2 class="text-2xl font-semibold text-cyan-400 mb-2">Vision & Impact</h2>
         <p>
-          Whether mentoring innovation, reforming systems, or inspiring students — Dr. Rao stands as a symbol of what visionary academia can achieve. His belief in student potential and commitment to excellence continues to shape not just our project, but the future of engineering at RGUKT.
+          Dr. Rao has facilitated 25+ MoUs with global institutions and industry giants like Microsoft, SAP, and Wells Fargo — connecting students to internships, certifications, and international research. Nearly 30 students have gained global exposure under his mentorship. His work bridges academia and industry, ensuring RGUKT students are globally competitive and socially responsible.
         </p>
       </div>
 
       <p class="pt-4 italic text-yellow-300 font-bold text-2xl">
-        “A mentor, leader, and visionary shaping future engineers through unwavering dedication and innovation.”
+        “More than a mentor — he is a catalyst of transformation, igniting minds with knowledge, grounding them with discipline, and inspiring them with vision.”
       </p>
     </div>
 
