updated sir info

--- a/Team_Rudra-main/facultyInfo.html
+++ b/Team_Rudra-main/facultyInfo.html
@@ -45,16 +45,26 @@
 
 
     <!-- Sections -->
-    <div class="space-y-8 text-gray-200">
+    <div class="-mt-5 text-gray-200">
 
-      <div>
-        <h2 class="text-2xl font-semibold text-cyan-400 mb-2">Research & Innovation</h2>
+      <!-- <div>
+        
         <p>
           A strong proponent of interdisciplinary collaboration, Dr. Rao led a ₹12 lakh DSIR-funded research project on sustainable construction materials, and has also supervised research on lightweight composites at NIT Warangal. He has published extensively in internationally reputed journals such as Construction & Building Materials and Materials Today: Proceedings, contributing significantly to the fields of structural durability and green technologies.
-        </p>
-      </div>
+        </p> <br>
+        <p>
+As a former Controller of Examinations, Dean (Research & Development), and Innovation Cell Coordinator, Dr. Rao spearheaded major reforms — including transparent UG admissions, restructuring of examination protocols post-2019, and the establishment of cutting-edge laboratories from scratch, such as the Strength of Materials Lab.
+</p><br>
+<p>
+He has facilitated 25+ MoUs with premier global and national institutions, enabling students to access internships, research pathways, and skill certifications from partners like Microsoft, SAP, Wells Fargo, and foreign universities. Nearly 30 students have gained international exposure under his guidance.
+</p><br> <p>
+His recognitions include being the first RGUKT Basar faculty to file a patent, and being honoured with the Telangana State Best Teacher Award in 2024 — a testimony to his dedication, vision, and influence in academic reform and student empowerment.
+</p> <br>
+<p>Currently, he continues to be the driving force behind multiple faculty development programs (FDPs), certification courses (such as SOLIDWORKS), startup mentoring, and research proposals. His mentorship bridges the gap between academic knowledge and real-world engineering, shaping students into professionals who are technically sound, socially conscious, and globally competitive.
+</p><br>
+      </div> -->
 
-      <div>
+      <!-- <div>
         <h2 class="text-2xl font-semibold text-cyan-400 mb-2">Key Achievements</h2>
         <ul class="list-disc pl-5 mt-2 space-y-1">
           <li>Launched innovation cells and incubation platforms in 2016 at RGUKT Basar</li>
@@ -63,7 +73,7 @@
           <li>Published in international journals on sustainable and composite materials</li>
           <li>Telangana State Best Teacher Award recipient (2024)</li>
         </ul>
-      </div>
+      </div><br>
 
       <div>
         <h2 class="text-2xl font-semibold text-cyan-400 mb-2">Leadership & Service</h2>
@@ -74,7 +84,7 @@
           <li>Organized faculty development programs, SOLIDWORKS training, and startup mentoring</li>
         </ul>
       </div>
-
+<br>
       <div>
         <h2 class="text-2xl font-semibold text-cyan-400 mb-2">Vision & Impact</h2>
         <p>
@@ -84,8 +94,88 @@
 
       <p class="pt-4 italic text-yellow-300 font-bold text-2xl">
         “More than a mentor — he is a catalyst of transformation, igniting minds with knowledge, grounding them with discipline, and inspiring them with vision.”
-      </p>
+      </p> -->
     </div>
+
+      <section class="container mx-auto px-4 py-2">
+
+    <!-- Academic & Research Profile -->
+    <div class="mb-10">
+      <h2 class="text-3xl font-semibold text-yellow-400 mb-4">Academic & Research Profile</h2>
+      <p class="text-gray-300 mb-3">Dr. V. Chandra Sekhara Rao is an accomplished academician, research innovator, and strategic institutional leader. A proud alumnus of IIT Madras, he holds a Ph.D. in Mechanical Engineering, with research specializations in:</p>
+      <ul class="list-disc list-inside text-gray-300 mb-4">
+        <li>Polymer Composites</li>
+        <li>Fracture & Durability Mechanics</li>
+        <li>Non-Destructive Testing (NDT)</li>
+        <li>Eco-Sustainable Engineering Solutions</li>
+      </ul>
+      <p class="text-gray-300">With 11+ years of academic, research, and administrative experience, he has played a pivotal role in shaping a research-driven, innovation-centric ecosystem at RGUKT Basar.</p>
+    </div>
+
+    <!-- Key Achievements -->
+    <div class="mb-10">
+      <h2 class="text-3xl font-semibold text-yellow-400 mb-4">Key Achievements</h2>
+      <ul class="list-disc list-inside text-gray-300 space-y-2">
+        <li>Recipient of Telangana State Best Teacher Award (2024)</li>
+        <li>First faculty at RGUKT Basar to file a patent</li>
+        <li>Guided the first national win for RGUKT Basar in Smart India Hackathon (Hardware Edition)</li>
+        <li>Mentored students to file patents, develop award-winning prototypes, and gain international exposure</li>
+        <li>Initiated entrepreneurship cells and innovation labs as early as 2016</li>
+        <li>Successfully led a ₹12 Lakh DSIR-funded research project on sustainable construction materials</li>
+      </ul>
+    </div>
+
+    <!-- Research & Publications -->
+    <div class="mb-10">
+      <h2 class="text-3xl font-semibold text-yellow-400 mb-4">Research & Publications</h2>
+      <p class="text-gray-300 mb-3">Dr. Rao’s research contributions span structural durability and green technologies. He has published extensively in reputed journals, including:</p>
+      <ul class="list-disc list-inside text-gray-300 mb-4">
+        <li>Construction & Building Materials</li>
+        <li>Materials Today: Proceedings</li>
+      </ul>
+      <p class="text-gray-300">He has also supervised high-impact projects at premier institutes like NIT Warangal, especially in lightweight composite materials and sustainable alternatives.</p>
+    </div>
+
+    <!-- Institutional Contributions -->
+    <div class="mb-10">
+      <h2 class="text-3xl font-semibold text-yellow-400 mb-4">Institutional Contributions</h2>
+      <p class="text-gray-300 mb-3">Served in key leadership roles including:</p>
+      <ul class="list-disc list-inside text-gray-300 mb-4">
+        <li>Controller of Examinations</li>
+        <li>Dean, Research & Development</li>
+        <li>Innovation Cell Coordinator</li>
+      </ul>
+      <p class="text-gray-300 mb-3">Spearheaded major reforms:</p>
+      <ul class="list-disc list-inside text-gray-300 mb-4">
+        <li>Transparent UG admissions</li>
+        <li>Restructured post-2019 exam protocols</li>
+        <li>Established key labs from scratch (e.g., Strength of Materials Lab)</li>
+      </ul>
+      <p class="text-gray-300">Facilitated 25+ MoUs with top institutions and companies such as:</p>
+      <ul class="list-disc list-inside text-gray-300 mb-4">
+        <li>Microsoft</li>
+        <li>SAP</li>
+        <li>Wells Fargo</li>
+        <li>Multiple international universities</li>
+      </ul>
+    </div>
+
+    <!-- Student Empowerment & Mentorship -->
+    <div class="mb-10">
+      <h2 class="text-3xl font-semibold text-yellow-400 mb-4">Student Empowerment & Mentorship</h2>
+      <ul class="list-disc list-inside text-gray-300 mb-4">
+        <li>Designed and led multiple Faculty Development Programs (FDPs), certification courses (e.g., SOLIDWORKS), and startup mentoring programs</li>
+        <li>Enabled nearly 30+ students to gain international exposure through internships and collaborations</li>
+        <li>Constantly bridges academic learning with real-world engineering applications</li>
+      </ul>
+    </div>
+
+    <!-- Quote -->
+    <p class="pt-4 italic text-orange-600 font-bold text-2xl">
+        “More than a mentor — he is a catalyst of transformation, igniting minds with knowledge, grounding them with discipline, and inspiring them with vision.”
+      </p>
+
+  </section>
 
     <!-- Back Button -->
     <div class="flex justify-end mt-10">
